Updated to use Mambu 3.12 model and the latest dependency libraries
3.12 model changes:
1. Updated pom xml to use 3.12 model jar and added xml header  to
prevent Eclipse warning
2. Updated DemoTestUserService: CustomViewApiType was renamed to
ApiViewType
3. Updated test case to add new model param to JSON message

Dependencies update:
4 Updated pom.xml to use newer versions for dependent libraries
5. Updated source code to remove deprecated HttpParam class
6. Replaced deprecated HTTP.UTF_8 with StandardCharsets.UTF_8
7. Submitted the latest for target/lib
8  Removed 3.9 versions of jars